# RJustAuth-demo

./: Cargo.toml
assets/: index.html  test.html  users.html
src/: main.rs  rest_auth_controller.rs  user_service.rs
src/router/: mod.rs  router.rs
